package app.controllers;

import app.persistence.ConnectionPool;
import io.javalin.Javalin;
import io.javalin.http.Context;

public class SalesController {

    public void addRoutes(Javalin app, ConnectionPool connectionPool) {

    }

    public void approveReview(Context ctx, ConnectionPool connectionPool) {

    }

    public void updatePrice(Context ctx, ConnectionPool connectionPool) {

    }

    public void viewCostumersOrders(Context ctx, ConnectionPool connectionPool) {

    }

    public void viewCarportSchematic(Context ctx) {

    }
}
