package app.generators;

import app.entities.OrderBillItem;

import java.util.List;

public class OrderBillGenerator {

    List<OrderBillItem> generateOrderBill(int width, int length){
        return null;
    }
}
