package app.util;

public class CarportSchematicGenerator {

    public void generateSchematic(int width, int length){
    } // SPØRG!!!!
}
