-- This script was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://github.com/pgadmin-org/pgadmin4/issues/new/choose if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public.accounts
(
    account_id serial NOT NULL,
    account_email character varying(50) NOT NULL,
    account_password character varying(50) NOT NULL,
    account_role character varying(30) NOT NULL DEFAULT 'CUSTOMER',
    account_first_name character varying(30),
    account_last_name character varying(30),
    account_address character varying(30),
    account_zip smallint,
    account_phone_number character varying(30),
    PRIMARY KEY (account_id)
);

CREATE TABLE IF NOT EXISTS public.orders
(
    order_id serial NOT NULL,
    account_id integer NOT NULL,
    order_title character varying(50) NOT NULL,
    order_comment character varying(80) NOT NULL,
    carport_width smallint NOT NULL,
    carport_length smallint NOT NULL,
    order_status character varying(20) NOT NULL,
    order_total_price numeric NOT NULL,
    order_timestamp timestamp without time zone NOT NULL,
    PRIMARY KEY (order_id)
);

CREATE TABLE IF NOT EXISTS public.materials
(
    material_id serial NOT NULL,
    material_type character varying(20) NOT NULL,
    material_description character varying(50) NOT NULL,
    material_unit character varying(20) NOT NULL,
    material_price integer NOT NULL,
    PRIMARY KEY (material_id)
);

CREATE TABLE IF NOT EXISTS public.material_variants
(
    material_variant_id serial NOT NULL,
    material_id integer NOT NULL,
    length integer,
    PRIMARY KEY (material_variant_id)
);

CREATE TABLE IF NOT EXISTS public.invoices
(
    invoice_id serial NOT NULL,
    order_id integer NOT NULL,
    account_id integer NOT NULL,
    invoice_date date NOT NULL,
    PRIMARY KEY (invoice_id),
    CONSTRAINT order_id_unique UNIQUE (order_id)
);

CREATE TABLE IF NOT EXISTS public.order_bills
(
    order_id integer NOT NULL,
    material_variant_id integer NOT NULL,
    item_description character varying(50) NOT NULL,
    item_quantity integer NOT NULL
);

CREATE TABLE IF NOT EXISTS public.postal_codes
(
    zip smallint NOT NULL,
    city character varying(30) NOT NULL,
    PRIMARY KEY (zip)
);

ALTER TABLE IF EXISTS public.accounts
    ADD FOREIGN KEY (account_zip)
        REFERENCES public.postal_codes (zip) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;


ALTER TABLE IF EXISTS public.orders
    ADD FOREIGN KEY (account_id)
        REFERENCES public.accounts (account_id) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;


ALTER TABLE IF EXISTS public.material_variants
    ADD FOREIGN KEY (material_id)
        REFERENCES public.materials (material_id) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;


ALTER TABLE IF EXISTS public.invoices
    ADD FOREIGN KEY (order_id)
        REFERENCES public.orders (order_id) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;


ALTER TABLE IF EXISTS public.invoices
    ADD FOREIGN KEY (account_id)
        REFERENCES public.accounts (account_id) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;


ALTER TABLE IF EXISTS public.order_bills
    ADD FOREIGN KEY (material_variant_id)
        REFERENCES public.material_variants (material_variant_id) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;


ALTER TABLE IF EXISTS public.order_bills
    ADD FOREIGN KEY (order_id)
        REFERENCES public.orders (order_id) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;


INSERT INTO materials (material_type, material_description, material_unit, material_price) VALUES
    ('WOOD', '45x195 mm. spærtræ ubh.', 'Stk', 32),
    ('WOOD', '97x97 mm. trykimp. Stolpe', 'Stk', 36),
    ('SCREWS', '4,5 x 60 mm. skruer 200 stk.', 'Pakke', 59);


INSERT INTO material_variants (material_id, length) VALUES
    (1, 300),
    (1, 360),
    (1, 420),
    (1, 480),
    (1, 540),
    (1, 600),

    (2, 300),

    (3, 1);


INSERT INTO postal_codes (zip, city) VALUES
    (1000, 'København K'),
    (1500, 'København V'),
    (1800, 'Frederiksberg C'),
    (2000, 'Frederiksberg'),
    (2100, 'København Ø'),
    (2150, 'Nordhavn'),
    (2200, 'København N'),
    (2300, 'København S'),
    (2400, 'København NV'),
    (2450, 'København SV'),
    (2500, 'Valby'),
    (2600, 'Glostrup'),
    (2605, 'Brøndby'),
    (2610, 'Rødovre'),
    (2620, 'Albertslund'),
    (2625, 'Vallensbæk'),
    (2630, 'Taastrup'),
    (2635, 'Ishøj'),
    (2640, 'Hedehusene'),
    (2650, 'Hvidovre'),
    (2660, 'Brøndby Strand'),
    (2665, 'Vallensbæk Strand'),
    (2700, 'Brønshøj'),
    (2720, 'Vanløse'),
    (2730, 'Herlev'),
    (2740, 'Skovlunde'),
    (2750, 'Ballerup'),
    (2760, 'Måløv'),
    (2765, 'Smørum'),
    (2770, 'Kastrup'),
    (2791, 'Dragør'),
    (2800, 'Kongens Lyngby'),
    (2820, 'Gentofte'),
    (2830, 'Virum'),
    (2840, 'Holte'),
    (2850, 'Nærum'),
    (2860, 'Søborg'),
    (2870, 'Dyssegård'),
    (2880, 'Bagsværd'),
    (2900, 'Hellerup'),
    (2920, 'Charlottenlund'),
    (2930, 'Klampenborg'),
    (2942, 'Skodsborg'),
    (2950, 'Vedbæk'),
    (2960, 'Rungsted Kyst'),
    (2970, 'Hørsholm'),
    (2980, 'Kokkedal'),
    (2990, 'Nivå'),
    (3000, 'Helsingør'),
    (3050, 'Humlebæk'),
    (3060, 'Espergærde'),
    (3070, 'Snekkersten'),
    (3080, 'Tikøb'),
    (3100, 'Hornbæk'),
    (3120, 'Dronningmølle'),
    (3140, 'Ålsgårde'),
    (3150, 'Hellebæk'),
    (3200, 'Helsinge'),
    (3210, 'Vejby'),
    (3220, 'Tisvildeleje'),
    (3230, 'Græsted'),
    (3250, 'Gilleleje'),
    (3300, 'Frederiksværk'),
    (3310, 'Ølsted'),
    (3320, 'Skævinge'),
    (3330, 'Gørløse'),
    (3360, 'Liseleje'),
    (3370, 'Melby'),
    (3390, 'Hundested'),
    (3400, 'Hillerød'),
    (3450, 'Allerød'),
    (3460, 'Birkerød'),
    (3480, 'Fredensborg'),
    (3490, 'Kvistgård'),
    (3500, 'Værløse'),
    (3520, 'Farum'),
    (3540, 'Lynge'),
    (3550, 'Slangerup'),
    (3600, 'Frederikssund'),
    (3630, 'Jægerspris'),
    (3650, 'Ølstykke'),
    (3660, 'Stenløse'),
    (3670, 'Veksø Sjælland'),
    (3700, 'Rønne'),
    (3720, 'Aakirkeby'),
    (3730, 'Nexø'),
    (3740, 'Svaneke'),
    (3751, 'Østermarie'),
    (3760, 'Gudhjem'),
    (3770, 'Allinge'),
    (3782, 'Klemensker'),
    (3790, 'Hasle'),
    (4000, 'Roskilde'),
    (4050, 'Skibby'),
    (5000, 'Odense'),
    (8000, 'Aarhus'),
    (9000, 'Aalborg');


INSERT INTO accounts (account_email, account_password, account_role, account_first_name, account_last_name, account_address, account_zip, account_phone_number) VALUES
    ('jesper@cphbusiness.dk', '1234', 'CUSTOMER', 'Jesper', 'Jensen', 'Gl. Kongevej 154', 1800, '04 54 58 82'),
    ('jon@cphbusiness.dk', '1234', 'CUSTOMER', 'Jon', 'Paulsen', 'Bygaden 1', 3550, '40 03 08 60'),
    ('kim@cphbusiness.dk', '1234', 'CUSTOMER', 'Kim', 'Andersen', 'Pladehals Allé 53', 2450, '80 52 20 54'),
    ('signe@cphbusiness.dk', '1234', 'SELLER', 'Signe', 'Petersen', null, null, null);


END;